--- a/introductionpage.html
+++ b/introductionpage.html
@@ -62,7 +62,7 @@
         <p class="mot-title">2. 即時更新和查閱</p>
         <p class="mot-txt">記帳網頁可以即時更新支出和收入的數據，並且所有成員可以隨時查閱最新的財務狀況。</p>
         <p class="mot-title">3. 簡化溝通流程</p>
-        <p class="mot-txt">通過記帳網頁，成員們不再需要通過各種方式零散地報告開銷，而是可以統一通過網頁進行記錄和提交。</p>
+        <p class="mot-txt">透過記帳網頁，成員們不再需要再各種方式零散地報告開銷，而是可以統一經過網頁進行記錄和提交。</p>
     </div>
     <!-- 功能介紹 -->
     <main id="main">
@@ -134,7 +134,7 @@
             <tr>
                 <td>撰寫前後端架構</td>
                 <td>報告及介紹網頁製作</td>
-                <td>網頁美化及排版</td>
+                <td>記帳網頁美化及排版</td>
             </tr>
         </table>
     </div>
